; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv50/extr_headc37d.c_headc37d_olut.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv50/extr_headc37d.c_headc37d_olut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nv50_head = type { i32 }
%struct.nv50_head_atom = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32, i64, i64 }

@head907d_olut_load = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nv50_head*, %struct.nv50_head_atom*)* @headc37d_olut to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @headc37d_olut(%struct.nv50_head* %0, %struct.nv50_head_atom* %1) #0 {
  %3 = alloca %struct.nv50_head*, align 8
  %4 = alloca %struct.nv50_head_atom*, align 8
  store %struct.nv50_head* %0, %struct.nv50_head** %3, align 8
  store %struct.nv50_head_atom* %1, %struct.nv50_head_atom** %4, align 8
  %5 = load %struct.nv50_head_atom*, %struct.nv50_head_atom** %4, align 8
  %6 = getelementptr inbounds %struct.nv50_head_atom, %struct.nv50_head_atom* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i32 2, i32* %7, align 8
  %8 = load %struct.nv50_head_atom*, %struct.nv50_head_atom** %4, align 8
  %9 = getelementptr inbounds %struct.nv50_head_atom, %struct.nv50_head_atom* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 4
  store i64 0, i64* %10, align 8
  %11 = load %struct.nv50_head_atom*, %struct.nv50_head_atom** %4, align 8
  %12 = getelementptr inbounds %struct.nv50_head_atom, %struct.nv50_head_atom* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 3
  store i64 0, i64* %13, align 8
  %14 = load %struct.nv50_head_atom*, %struct.nv50_head_atom** %4, align 8
  %15 = getelementptr inbounds %struct.nv50_head_atom, %struct.nv50_head_atom* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  store i32 1, i32* %16, align 4
  %17 = load i32, i32* @head907d_olut_load, align 4
  %18 = load %struct.nv50_head_atom*, %struct.nv50_head_atom** %4, align 8
  %19 = getelementptr inbounds %struct.nv50_head_atom, %struct.nv50_head_atom* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 2
  store i32 %17, i32* %20, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
